[tool.poetry]
name = "rmediator"
version = "0.1.9"
description = "Request mediator"
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
